created an sql file and created a database table and changed the get on the animals to connect to that database to get the data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "python.pythonPath": "/Users/nickcarver/.local/share/virtualenvs/python-server-sCLGVDTF/bin/python"
+    "python.pythonPath": "/Users/nickcarver/.local/share/virtualenvs/python-server-sCLGVDTF/bin/python",
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "driver": "SQLite",
+            "name": "Python Kennels",
+            "database": "${workspaceFolder:python-server}/kennel.db"
+        }
+    ],
+    "sqltools.useNodeRuntime": true
 }
